clusters/home/ingress/caddy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: caddy-system
  labels:
    app.kubernetes.io/name: caddy-ingress-controller
    app.kubernetes.io/instance: caddy
    app.kubernetes.io/version: "v0.2.1"
---
apiVersion: v1
kind: Service
metadata:
  name: caddy-caddy-ingress-controller
  namespace: caddy-system
  labels:
    app.kubernetes.io/name: caddy-ingress-controller
    app.kubernetes.io/instance: caddy
    app.kubernetes.io/version: "v0.2.1"
spec:
  type: "LoadBalancer"
  loadBalancerIP:
  externalTrafficPolicy:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: caddy-ingress-controller
    app.kubernetes.io/instance: caddy
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: caddy-caddy-ingress-controller
  namespace: caddy-system
  labels:
    app.kubernetes.io/name: caddy-ingress-controller
    app.kubernetes.io/instance: caddy
    app.kubernetes.io/version: "v0.2.1"
spec:
  #replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: caddy-ingress-controller
      app.kubernetes.io/instance: caddy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: caddy-ingress-controller
        app.kubernetes.io/instance: caddy
        app.kubernetes.io/version: "v0.2.1"
    spec:
      serviceAccountName: caddy-ingress-controller
      securityContext:
        {}
      containers:
        - name: caddy-ingress-controller
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - ALL
            runAsGroup: 0
            runAsUser: 0
          image: "caddy/ingress:v0.2.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: metrics
              containerPort: 9765
              protocol: TCP
          resources:
            {}
          volumeMounts:
          - name: tmp
            mountPath: /tmp
          args:
            - -config-map=caddy-ingress-controller-configmap
            - -class-name=caddy
          readinessProbe:
            initialDelaySeconds: 3
            periodSeconds: 10
            httpGet:
              port: 9765
              path: /healthz
      volumes:
      - name: tmp
        emptyDir: {}
